# final-project-brunchyy

./: Diagram.drawio  Main.py  README.md  environment.yml  homework_0_week_9.ipynb  pyproject.toml  run_plot.py  try_homework1_week9_.ipynb
examples/: Main.py  load_parse_inputs.ipynb  main.py  plot_power_curves.py
src/: __init__.py  _init_.py  data_loader.py  stats.py  turbine.py  wind_rose_inspo.py
tests/: part_b.ipynb  test_all.py  test_core.py  test_data_loader.py  test_turbine.py  tests.py
